--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email: dan.sonnenburg@gmail.com
   facebook:
   flickr:
-  github: github.com/dansonnenburg
+  github: dansonnenburg
   instagram:
-  linkedin:
+  linkedin: dan-sonnenburg
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: dan_sonnenburg
