fix: updated linkedin link

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: dansonnenburg
   instagram:
-  linkedin: dan-sonnenburg
+  linkedin: dan-sonnenburg-3aa9a424
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: dan_sonnenburg
